<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrekAgent</string>
    <string name="action_settings">Settings</string>
    <string name="title">TrekAgent</string>
    <string name="CurrentLocation">Current Location</string>
    <string name="MyWishList">My Wish List</string>
    <string name="Search">Search</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_wish_list">MyWishList</string>
    <string name="Arusha">Arusha</string>
    <string name="HongKong">Hong Kong</string>
    <string name="LosAngeles">Los Angeles</string>
    <string name="title_activity_current_location">CurrentLocation</string>
    <string name="title_activity_warning">Warning</string>
    <string name="OK">Okay, got it!</string>
    <string name="title_activity_arusha">Arusha</string>
    <string name="title_activity_hong_kong">HongKong</string>
    <string name="title_activity_los_angeles">LosAngeles</string>
    <string name="title_activity_warning2">Warning2</string>

</resources>