<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.trekagent.MyWishList" 
    android:background="#8882BE"
    >

    <TextView android:id="@+id/MyWishList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/MyWishList"
        android:textColor="#FFFFFF" 
      />

    <ImageView 
        android:id="@+id/imageView"
        android:src="@drawable/name_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
    <Button
        android:id="@+id/LosAngeles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/LosAngeles"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/HongKong"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/HongKong"
        android:textColor="#FFFFFF" />
    
    <Button
        android:id="@+id/Paris"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/Paris"
        android:textColor="#FFFFFF" />
</RelativeLayout>
